<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Order By</string>
    <string name="title_activity_details">Movie Details</string>

    <string name="title_tv_default">Title: \n</string>
    <string name="release_date_tv_default">Release Date: \n</string>
    <string name="avg_tv_default">Avg. Rating: \n</string>
    <string name="plot_tv_default">Plot: \n</string>
    <string name="poster_iv_default">Place of poster</string>

    <string name="top_rated">Rating</string>
    <string name="most_popular">Popularity</string>

    <string name="trailer_TV_default">Trailers:</string>
    <string name="reviews_TV_default">Reviews:</string>
    <string name="favorites">Favorites</string>

</resources>
